@@ -28,6 +28,7 @@ NEWS
   * Fix bug with FastCGI request id overflow under high load; just use always id 1 as we don't use multiplexing. (thx jgray)
   * Add some dirlisting enhancements (fixes #1458)
   * Add option to enable TCP_DEFER_ACCEPT (fixes #1447)
+  * Limit amount of bytes read for one read-event (fixes #1070)
 
 - 1.4.22 - 2009-03-07
   * Fix wrong lua type for CACHE_MISS/CACHE_HIT in mod_cml (fixes #533)
